change to mongodb

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,7 @@ API_KEY =
 
 # Der Ort, an dem die hochgeladenen Fotos gelagert werden
 UPLOAD_PATH =
+
+
+//mache env datei mit meinen daten 
+///post request usw....
